# advent-of-code

./: .gitignore  advent-of-code.cabal
2015/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.pl  Day09.hs  Day10.hs  Day11.hs  Day11.pl  Day12.hs  Day12.js  Day13.hs  Day14.hs  Day15.hs  Day15.pl  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  GridParser.hs  Utils.hs  Vec.hs  aoc2015.cabal
2015/input/: 12.json
2016/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.md  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Dijkstra.hs  Interpreter.hs  Utils.hs  aoc2016.cabal
2016/input/: 22.txt  23.txt  23_manually_optimized.txt
2017/: Cargo.toml  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23_1.hs  Day24.hs  Day25.hs  KnotHash.hs  PrefixTree.hs  Utils.hs  aoc2017.cabal  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day23_2.js  day23_2.smt2  hie.yaml
2017/input/: 04.txt  08.txt  19.txt  25.txt
2018/: .gitignore  Cargo.toml  Day01.lean  Day02.hs  Day03.hs  Day04.hs  Day04.ml  Day05.lean  Day06.hs  Day06.lean  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day16.pl  Day23.hs  Day23.py  Day25.hs  Gen.lean  ParseUtils.hs  Zipper.hs  aoc2018.cabal  day05.rs  day06.rs  dune  flake.nix  lake-manifest.json  lakefile.lean  parse.pl
2018/_build/: .digest-db  log
2018/input/: 16_program.txt  16_samples.txt  23.txt
2019/: Day01.hs  Day02.hs  Day03.hs  Day04.pl  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  IntcodeComputer.hs  Utils.hs  aoc2019.cabal
2019/input/: 07.txt  09.txt
2020/: .gitignore  Day02.pl  Day03.pl  Day04.pl  Day05.pl  Day06.hs  Day07.pl  Day08.pl  Day09.pl  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day13.pl  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.pl  Day20.hs  Day21.hs  Day21.pl  Day22.hs  Day23.hs  Day24.hs  Day25.md  Main.hs  Utils.hs  aoc2020.cabal  utils.pl  x2020.cabal
2020/input/: 04.txt  09.txt
2021/: 01-solution.hs  02-solution.hs  03-solution.hs  03-solution.pl  04-solution.hs  05-solution.hs  24-input.txt  24-input2.txt  Cuboid.hs  Day01.hs  Day02.pl  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day24.pl  Day25.hs  Main.hs  ParseUtil.hs  Utils.hs  aoc2021.cabal  cabal.project  x2021.cabal
2021/input/: 07.txt  22.txt  23_.txt
2022/: .editorconfig  .gitignore  Cuboid.hs  Day01.hs  Day02.pl  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day15.pl  Day16.py  Day17.hs  Day18.hs  Day19.py  Day20.hs  Day21.pl  Day22.hs  Day23.hs  Day24.hs  Day25.pl  Utils.hs  aoc2022.cabal  cabal.project  utils.pl
2022/input/: 05.txt  14.txt  16.txt  18.txt  19.txt  20.txt
2023/: DFA.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Graph.hs  NFA.hs  RegExp.hs  Utils.hs  aoc2023.cabal  cabal.project
2023/input/: 04.txt
2024/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day17.pl  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  aoc2024.cabal  cabal.project  day17.pl
2025/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day11.hs  aoc2025.cabal
lib/: CHANGELOG.md  aoclib.cabal
lib/src/: Graph.hs  PairingHeap.hs  Trie.hs  Utils.hs
lib/test/: Main.hs
