cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

executable day01-2019
    main-is:          Day01.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
    hs-source-dirs:   2019
    default-language: Haskell2010

executable day02-2019
    main-is:          Day02.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    hs-source-dirs:   2019
    default-language: Haskell2010

executable day03-2019
    main-is:          Day03.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    hs-source-dirs:   2019
    default-language: Haskell2010

executable day05-2019
    main-is:          Day05.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    hs-source-dirs:   2019
    default-language: Haskell2010
    other-modules:    IntcodeComputer

executable day06-2019
    main-is:          Day06.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    hs-source-dirs:   2019
    default-language: Haskell2010

executable day07-2019
    main-is:          Day07.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    hs-source-dirs:   2019
    default-language: Haskell2010
    other-modules:    IntcodeComputer

executable day08-2019
    main-is:          Day08.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , split
    hs-source-dirs:   2019
    default-language: Haskell2010

executable day09-2019
    main-is:          Day09.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    hs-source-dirs:   2019
    default-language: Haskell2010
    other-modules:    IntcodeComputer

executable day06-2020
    main-is:          Day06.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day10-2020
    main-is:          Day10.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , extra
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day11-2020
    main-is:          Day11.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , extra
                    , containers
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day12-2020
    main-is:          Day12.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day13-2020
    main-is:          Day13.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day14-2020
    main-is:          Day14.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , parsec
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day15-2020
    main-is:          Day15.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day16-2020
    main-is:          Day16.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day17-2020
    main-is:          Day17.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day18-2020
    main-is:          Day18.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day20-2020
    main-is:          Day20.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , megaparsec
                    , extra
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day21-2020
    main-is:          Day21.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , parsec
                    , extra
    hs-source-dirs:   2020
    default-language: Haskell2010

executable day24-2020
    main-is:          Day24.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , megaparsec
                    , extra
    hs-source-dirs:   2020
    default-language: Haskell2010
    other-modules:    Vec

executable day04-2021
    main-is:          Day04.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , parsec
    hs-source-dirs:   2021
    default-language: Haskell2010
    other-modules:    ParseUtil

executable day05-2021
    main-is:          Day05.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , parsec
    hs-source-dirs:   2021
    default-language: Haskell2010
    other-modules:    ParseUtil

executable day06-2021
    main-is:          Day06.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day07-2021
    main-is:          Day07.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
    hs-source-dirs:   2021
    default-language: Haskell2010
    other-modules:    ParseUtil

executable day08-2021
    main-is:          Day08.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
    hs-source-dirs:   2021
    default-language: Haskell2010
    other-modules:    ParseUtil

executable day09-2021
    main-is:          Day09.hs
    build-depends:    base ^>=4.14.3.0
                    , array
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day10-2021
    main-is:          Day10.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day11-2021
    main-is:          Day11.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , parsec
    hs-source-dirs:   2021
    default-language: Haskell2010
    other-modules:    ParseUtil

executable day12-2021
    main-is:          Day12.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , parsec
    hs-source-dirs:   2021
    default-language: Haskell2010
    other-modules:    ParseUtil

executable day13-2021
    main-is:          Day13.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day14-2021
    main-is:          Day14.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day15-2021
    main-is:          Day15.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , search-algorithms
                    , containers
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day16-2021
    main-is:          Day16.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day17-2021
    main-is:          Day17.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day18-2021
    main-is:          Day18.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day19-2021
    main-is:          Day19.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , matrix
                    , containers
    hs-source-dirs:   2021
    default-language: Haskell2010
    other-modules:    Utils

executable day20-2021
    main-is:          Day20.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day21-2021
    main-is:          Day21.hs
    build-depends:    base ^>=4.14.3.0
                    , MemoTrie
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day22-2021
    main-is:          Day22.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day23-2021
    main-is:          Day23.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , search-algorithms
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day24-2021
    main-is:          Day24.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , megaparsec
    hs-source-dirs:   2021
    default-language: Haskell2010

executable day25-2021
    main-is:          Day25.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
    hs-source-dirs:   2021
    default-language: Haskell2010
    other-modules:    ParseUtil