cabal-version:      2.4
name:               aoc2015
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

library utils
    build-depends:    base ^>=4.14.3.0
                    , QuickCheck
                    , containers
                    , megaparsec
    exposed-modules:  Utils
    default-language: Haskell2010

executable day01
    main-is:          Day01.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
    default-language: Haskell2010

executable day02
    main-is:          Day02.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
    default-language: Haskell2010

executable day03
    main-is:          Day03.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Vec

executable day04
    main-is:          Day04.hs
    build-depends:    base ^>=4.14.3.0
                    , cryptonite
                    , bytestring
    default-language: Haskell2010

executable day05
    main-is:          Day05.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
    default-language: Haskell2010

executable day06
    main-is:          Day06.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day07
    main-is:          Day07.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day09
    main-is:          Day09.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day10
    main-is:          Day10.hs
    build-depends:    base ^>=4.14.3.0
    default-language: Haskell2010

executable day12
    main-is:          Day12.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
    default-language: Haskell2010

executable day13
    main-is:          Day13.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day14
    main-is:          Day14.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    
executable day15
    main-is:          Day15.hs
    build-depends:    base ^>=4.14.3.0
                    , sbv
    default-language: Haskell2010
   
executable day16
    main-is:          Day16.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
  
executable day17
    main-is:          Day17.hs
    build-depends:    base ^>=4.14.3.0
    default-language: Haskell2010
 
executable day18
    main-is:          Day18.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    GridParser

executable day19
    main-is:          Day19.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
                    , QuickCheck
    default-language: Haskell2010
    other-modules:    Utils

executable day20
    main-is:          Day20.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
    default-language: Haskell2010

executable day21
    main-is:          Day21.hs
    build-depends:    base ^>=4.14.3.0
                    , sbv
    default-language: Haskell2010

executable day22
    main-is:          Day22.hs
    build-depends:    base ^>=4.14.3.0
                    , microlens
                    , containers
    default-language: Haskell2010

executable day23
    main-is:          Day23.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day24
    main-is:          Day24.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
    default-language: Haskell2010

executable day25
    main-is:          Day25.hs
    build-depends:    base ^>=4.14.3.0
    default-language: Haskell2010