[package]
name = "aoc2017"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc1.357s.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.11.0"

[[bin]]
name = "day01"
path = "day01.rs"

[[bin]]
name = "day02"
path = "day02.rs"

[[bin]]
name = "day03"
path = "day03.rs"

[[bin]]
name = "day04"
path = "day04.rs"

[[bin]]
name = "day05"
path = "day05.rs"
