cabal-version:   3.0
name:            aoc2017
version:         0.1.0.0
license:         NONE
build-type:      Simple

common config
    ghc-options: -Wall
    build-depends:    
          base ^>=4.16.4.0
        , megaparsec
        , containers
        , text
    default-language: Haskell2010
    other-modules:    Utils
    default-extensions: 
        LambdaCase
        OverloadedStrings

executable day05
    import:           config
    main-is:          Day05.hs

executable day07
    import:           config
    main-is:          Day07.hs

executable day08
    import:           config
    main-is:          Day08.hs

executable day09
    import:           config
    main-is:          Day09.hs

executable day10
    import:           config
    main-is:          Day10.hs
