cabal-version:   3.0
name:            aoc2017
version:         0.1.0.0
license:         NONE
build-type:      Simple

common config
    ghc-options: -Wall -Wno-unused-do-bind -Wno-type-defaults 
    build-depends:    
          base ^>=4.17.2.0
        , megaparsec
        , containers
        , unordered-containers
        , text
    default-language: Haskell2010
    other-modules:    Utils
    default-extensions: 
        LambdaCase
        OverloadedStrings

executable day05
    import:  config
    main-is: Day05.hs

executable day07
    import:  config
    main-is: Day07.hs

executable day08
    import:  config
    main-is: Day08.hs

executable day09
    import:  config
    main-is: Day09.hs

executable day10
    import:  config
    main-is: Day10.hs
    other-modules: KnotHash

executable day11
    import:  config
    main-is: Day11.hs

executable day12
    import:  config
    main-is: Day12.hs

executable day13
    import:  config
    main-is: Day13.hs

executable day14
    import:  config
    main-is: Day14.hs
    other-modules: KnotHash

executable day15
    import:  config
    main-is: Day15.hs

executable day16
    import:  config
    main-is: Day16.hs

executable day17
    import:  config
    main-is: Day17.hs

executable day18
    import:  config
    main-is: Day18.hs

executable day19
    import:  config
    main-is: Day19.hs

executable day20
    import:  config
    main-is: Day20.hs

executable day21
    import:  config
    main-is: Day21.hs

executable day22
    import:  config
    main-is: Day22.hs
