cabal-version:      2.4
name:               aoc2018
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

executable day03
    main-is:          Day03.hs
    other-modules:    ParseUtils
    build-depends:    base
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day25
    main-is:          Day25.hs
    other-modules:    ParseUtils
    build-depends:    base
                    , megaparsec
    default-language: Haskell2010
