cabal-version:      3.0
name:               aoc2018
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me
build-type:         Simple

common config
    ghc-options: -Wall -Wno-unused-do-bind -Wno-type-defaults
    build-depends:    
          base
        , megaparsec
        , containers
        , unordered-containers        
        , transformers
        , QuickCheck
        , time
    default-language: Haskell2010
    other-modules: 
        ParseUtils
    default-extensions: 
        LambdaCase
        ScopedTypeVariables
        TupleSections
        OverloadedRecordDot
        DuplicateRecordFields

executable day03
    import:  config
    main-is: Day03.hs

executable day04
    import:  config
    main-is: Day04.hs

executable day25
    import:  config
    main-is: Day25.hs
