cabal-version:      3.0
name:               aoc2018
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me
build-type:         Simple

common config
  ghc-options: -Wall -Wno-unused-do-bind -Wno-type-defaults
  build-depends:    
      base
    , megaparsec
    , containers
    , unordered-containers        
    , transformers
    , QuickCheck
    , time
    , vector
  default-language: Haskell2010
  other-modules: 
    ParseUtils
  default-extensions: 
    LambdaCase
    ScopedTypeVariables
    TupleSections
    OverloadedRecordDot
    NumericUnderscores
    DuplicateRecordFields

executable day02
  import:  config
  main-is: Day02.hs

executable day03
  import:  config
  main-is: Day03.hs

executable day04
  import:  config
  main-is: Day04.hs

executable day06
  import:  config
  main-is: Day06.hs

executable day07
  import:  config
  main-is: Day07.hs

executable day08
  import:  config
  main-is: Day08.hs

executable day10
  import:  config
  main-is: Day10.hs

executable day11
  import:  config
  main-is: Day11.hs

executable day25
  import:  config
  main-is: Day25.hs
