cabal-version:      2.4
name:               aoc2019
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

executable day01
    main-is:          Day01.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
    default-language: Haskell2010

executable day02
    main-is:          Day02.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day03
    main-is:          Day03.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day05
    main-is:          Day05.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
                    , microlens
    default-language: Haskell2010
    other-modules:    IntcodeComputer

executable day06
    main-is:          Day06.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day07
    main-is:          Day07.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
                    , microlens
    default-language: Haskell2010
    other-modules:    IntcodeComputer

executable day08
    main-is:          Day08.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , split
    default-language: Haskell2010

executable day09
    main-is:          Day09.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
                    , microlens
    default-language: Haskell2010
    other-modules:    IntcodeComputer

executable day10
    main-is:          Day10.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010

executable day11
    main-is:          Day11.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
                    , microlens
    default-language: Haskell2010
    other-modules:    IntcodeComputer