cabal-version:      2.4
name:               aoc2019
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

common config
    ghc-options: -Wall -Wno-unused-do-bind -Wno-type-defaults 
    build-depends:    
          base ^>=4.17.2.0
        , megaparsec
        , containers
        , transformers
        , microlens
        , split
    default-language: Haskell2010
    other-modules:    
          IntcodeComputer
        , Utils
    default-extensions: 
        LambdaCase
        ScopedTypeVariables
        TupleSections

executable day01
    import:  config
    main-is: Day01.hs

executable day02
    import:  config
    main-is: Day02.hs

executable day03
    import:  config
    main-is: Day03.hs

executable day05
    import:  config
    main-is: Day05.hs

executable day06
    import:  config
    main-is: Day06.hs

executable day07
    import:  config
    main-is: Day07.hs

executable day08
    import:  config
    main-is: Day08.hs

executable day09
    import:  config
    main-is: Day09.hs

executable day10
    import:  config
    main-is: Day10.hs

-- executable day11
--     import:  config
--     main-is: Day11.hs

executable day12
    import:  config
    main-is: Day12.hs
