cabal-version:      2.4
name:               aoc2020
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

executable day06
    main-is:          Day06.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
    default-language: Haskell2010

executable day10
    main-is:          Day10.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , extra
    default-language: Haskell2010

executable day11
    main-is:          Day11.hs
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , extra
                    , containers
    default-language: Haskell2010

executable day12
    main-is:          Day12.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    default-language: Haskell2010

executable day13
    main-is:          Day13.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    default-language: Haskell2010

executable day14
    main-is:          Day14.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , parsec
    default-language: Haskell2010

executable day15
    main-is:          Day15.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
    default-language: Haskell2010

executable day16
    main-is:          Day16.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    default-language: Haskell2010

executable day17
    main-is:          Day17.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
    default-language: Haskell2010

executable day18
    main-is:          Day18.hs
    build-depends:    base ^>=4.14.3.0
                    , parsec
    default-language: Haskell2010

executable day20
    main-is:          Day20.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , megaparsec
                    , extra
    default-language: Haskell2010

executable day21
    main-is:          Day21.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , parsec
                    , extra
    default-language: Haskell2010

executable day22
    main-is:          Day22.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
    default-language: Haskell2010

executable day23
    main-is:          Day23.hs
    build-depends:    base ^>=4.14.3.0
                    , vector
    default-language: Haskell2010

executable day24
    main-is:          Day24.hs
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , megaparsec
                    , extra
    default-language: Haskell2010
    other-modules:    Vec