cabal-version:      2.4
name:               x2020
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

-- A copyright notice.
-- copyright:
-- category:

executable x2020
    main-is:          Main.hs
                    

    -- Modules included in this executable, other than Main.
    other-modules:    Day06
                    , Day18
                    , Day15
                    , Day13
                    , Day12
                    , Day16
                    , Day17

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , containers
    hs-source-dirs:   .
    default-language: Haskell2010
