cabal-version:      2.4
name:               x2020
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

-- A copyright notice.
-- copyright:
-- category:

executable x2020
    main-is:          Main.hs
                    

    -- Modules included in this executable, other than Main.
    other-modules:  Day11

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , parsec 
                    , containers
                    , extra
                    , MemoTrie
                    , megaparsec >=9.0.0
    hs-source-dirs:   .
    default-language: Haskell2010
