cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

common config
  ghc-options:        -Wall -Wno-unused-do-bind -Wno-type-defaults
  default-language:   Haskell2010
  other-modules:      ParseUtil
                    , Utils
  build-depends:      base 
                    , parsec
                    , containers
                    , search-algorithms
                    , array
                    , QuickCheck
                    , matrix
                    , MemoTrie
  default-extensions: LambdaCase
                      ScopedTypeVariables
                      TupleSections
                      OverloadedRecordDot
                      NumericUnderscores
                      DuplicateRecordFields

executable day01
    import:           config
    main-is:          Day01.hs

executable day04
    import:           config
    main-is:          Day04.hs

executable day05
    import:           config
    main-is:          Day05.hs

executable day06
    import:           config
    main-is:          Day06.hs

executable day07
    import:           config
    main-is:          Day07.hs

executable day08
    import:           config
    main-is:          Day08.hs

executable day09
    import:           config
    main-is:          Day09.hs

executable day10
    import:           config
    main-is:          Day10.hs

executable day11
    import:           config
    main-is:          Day11.hs

executable day12
    import:           config
    main-is:          Day12.hs

executable day13
    import:           config
    main-is:          Day13.hs

executable day14
    import:           config
    main-is:          Day14.hs

executable day15
    import:           config
    main-is:          Day15.hs

executable day16
    import:           config
    main-is:          Day16.hs

executable day17
    import:           config
    main-is:          Day17.hs

executable day18
    import:           config
    main-is:          Day18.hs

executable day19
    import:           config
    main-is:          Day19.hs

executable day20
    import:           config
    main-is:          Day20.hs

executable day21
    import:           config
    main-is:          Day21.hs

executable day22
    import:           config
    main-is:          Day22.hs

executable day23
    import:           config
    main-is:          Day23.hs

executable day25
    import:           config
    main-is:          Day25.hs
