cabal-version:      2.4
name:               x2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

executable x2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Day15
                    , Day18
                    , Day21
                    , Day22

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , search-algorithms
                    , parsec
                    , containers
    hs-source-dirs:   .
    default-language: Haskell2010
