cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me

executable day01
    main-is:          Day01.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
    default-language: Haskell2010
    other-modules:    Utils

executable day03
    main-is:          Day03.hs
    build-depends:    base >=4.14.3.0
                    , containers
                    , megaparsec
    default-language: Haskell2010
    other-modules:    Utils

executable day04
    main-is:          Day04.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day05
    main-is:          Day05.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day06
    main-is:          Day06.hs
    build-depends:    base >=4.14.3.0
    default-language: Haskell2010

executable day07
    main-is:          Day07.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day08
    main-is:          Day08.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day09
    main-is:          Day09.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils

executable day10
    main-is:          Day10.hs
    build-depends:    base >=4.14.3.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    other-modules:    Utils